feat: implement entity_type support for about
- refactor: update about schema and logic to support polymorphism (pura, yayasan, pasraman)

- test: update about unit tests using mocking strategy

- docs: update openapi spec for about endpoints
